refactor: updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,7 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 alpha_vantage_cache.sqlite
+
+src/test_sec.py
+src/check_full_data.py
+src/test_valuation.py
